--- a/package.json
+++ b/package.json
@@ -16,15 +16,18 @@
     "@radix-ui/react-popover": "^1.1.4",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.2",
+    "@react-google-maps/api": "^2.20.5",
     "@reduxjs/toolkit": "^2.5.0",
     "@tanstack/react-query": "^5.62.15",
     "@tanstack/react-query-devtools": "^5.62.15",
+    "@types/leaflet": "^1.9.16",
     "@types/react-datepicker": "^6.2.0",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "install": "^0.13.0",
+    "leaflet": "^1.9.3",
     "lucide-react": "^0.473.0",
     "npm": "^11.0.0",
     "react": "^18.3.1",
@@ -34,6 +37,8 @@
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
+    "react-leaflet": "^4.2.0",
+    "react-leaflet-cluster": "^2.0.0",
     "react-phone-number-input": "^3.4.10",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.1",
