--- a/package.json
+++ b/package.json
@@ -55,6 +55,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
+    "@rollup/plugin-alias": "^5.1.1",
+    "@types/node": "^22.13.1",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@types/react-phone-number-input": "^3.0.17",
