--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-icons": "^5.4.0",
     "react-leaflet": "^4.2.0",
     "react-leaflet-cluster": "^2.0.0",
+    "react-modal-image": "^2.6.0",
     "react-phone-number-input": "^3.4.10",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.1",
@@ -60,6 +61,7 @@
     "@types/node": "^22.13.1",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@types/react-modal-image": "^2.6.4",
     "@types/react-phone-number-input": "^3.0.17",
     "@types/react-slick": "^0.23.13",
     "@vitejs/plugin-react": "^4.3.4",
